--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -4,5 +4,6 @@
   "prettier.trailingComma": "none",
   "prettier.singleQuote": true,
   "prettier.semi": true,
-  "tsserver.enableJavascript": false
+  "tsserver.enableJavascript": false,
+  "diagnostic.displayByAle": true
 }
