--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -5,5 +5,7 @@
   "prettier.singleQuote": true,
   "prettier.semi": true,
   "tsserver.enableJavascript": false,
-  "diagnostic.displayByAle": true
+  "diagnostic.displayByAle": true,
+  "signature.target": "echo",
+  "hover.target": "echo"
 }
