--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -116,5 +116,9 @@ setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscor
 ################################################################################
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g @continuum-restore 'on'
