updates to work with neovim 0.7

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,6 +36,7 @@ set -g display-panes-time 3000 # 3s
 set-window-option -g monitor-activity on
 
 # Don't show distracting notifications
+set -g bell-action none
 set -g visual-bell off
 set -g visual-activity off
 
