--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -55,6 +55,11 @@ set-option -sa terminal-overrides ',screen-256color-bce:Tc'
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colors
 
+# Save & restore tmux layouts (https://github.com/tmux-plugins/tmux-resurrect/blob/master/docs/hooks.md)
+set -g @resurrect-hook-post-save-all 'eval $(xdotool getwindowgeometry --shell $WINDOWID); echo 0,$X,$Y,$WIDTH,$HEIGHT > $HOME/.tmux/resurrect/geometry'
+set -g @resurrect-hook-pre-restore-all 'wmctrl -i -r $WINDOWID -e $(cat $HOME/.tmux/resurrect/geometry)'
+set -g @resurrect-strategy-nvim 'session'
+
 ################################################################################
 # Key Binding
 ################################################################################
