--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -89,33 +89,46 @@ unbind %
 ################################################################################
 
 # TokyoNight colors for Tmux (https://github.com/folke/tokyonight.nvim/blob/main/extras/tmux_tokyonight_storm.tmux)
-set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+# set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+# set -g message-style "fg=#7aa2f7,bg=#3b4261"
+# set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+# set -g pane-border-style "fg=#3b4261"
+# set -g pane-active-border-style "fg=#7aa2f7"
+# set -g status "on"
+# set -g status-justify "left"
+# set -g status-style "fg=#7aa2f7,bg=#1f2335"
+# set -g status-left-length "100"
+# set -g status-right-length "100"
+# set -g status-left-style NONE
+# set -g status-right-style NONE
+# set -g status-left "#[fg=#1D202F,bg=#7aa2f7,nobold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
+# set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#1D202F,bg=#7aa2f7,bold] #h "
+# setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
+# setw -g window-status-separator ""
+# setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
+# setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
+# setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
 
-set -g message-style "fg=#7aa2f7,bg=#3b4261"
-set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
-
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#7aa2f7"
-
+# Duskfox colors for Tmux (https://github.com/edeneast/nightfox.nvim/raw/main/extra/duskfox/nightfox_tmux.tmux)
+set -g mode-style "fg=#191726,bg=#cdcbe0"
+set -g message-style "fg=#191726,bg=#cdcbe0"
+set -g message-command-style "fg=#191726,bg=#cdcbe0"
+set -g pane-border-style "fg=#cdcbe0"
+set -g pane-active-border-style "fg=#569fba"
 set -g status "on"
 set -g status-justify "left"
-
-set -g status-style "fg=#7aa2f7,bg=#1f2335"
-
+set -g status-style "fg=#cdcbe0,bg=#191726"
 set -g status-left-length "100"
 set -g status-right-length "100"
-
 set -g status-left-style NONE
 set -g status-right-style NONE
-
-set -g status-left "#[fg=#1D202F,bg=#7aa2f7,nobold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#1D202F,bg=#7aa2f7,bold] #h "
-
-setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
+set -g status-left "#[fg=#191726,bg=#569fba,bold] #S #[fg=#569fba,bg=#191726,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#191726,bg=#191726,nobold,nounderscore,noitalics]#[fg=#569fba,bg=#191726] #{prefix_highlight} #[fg=#cdcbe0,bg=#191726,nobold,nounderscore,noitalics]#[fg=#191726,bg=#cdcbe0] %Y-%m-%d  %I:%M %p #[fg=#569fba,bg=#cdcbe0,nobold,nounderscore,noitalics]#[fg=#191726,bg=#569fba,bold] #h "
+setw -g window-status-activity-style "underscore,fg=#6e6a86,bg=#191726"
 setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
-setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
+setw -g window-status-style "NONE,fg=#6e6a86,bg=#191726"
+setw -g window-status-format "#[fg=#191726,bg=#191726,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#191726,bg=#191726,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#191726,bg=#cdcbe0,nobold,nounderscore,noitalics]#[fg=#191726,bg=#cdcbe0,bold] #I  #W #F #[fg=#cdcbe0,bg=#191726,nobold,nounderscore,noitalics]"
 
 ################################################################################
 # Plugins
