wip migrate to ansible for scripting

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -76,6 +76,12 @@ bind -r p previous-window
 # Switch between two most recently used windows
 bind Space last-window
 
+# Switch between panes with vim commands
+bind -r C-l select-pane -R
+bind -r C-k select-pane -U
+bind -r C-h select-pane -L
+bind -r C-j select-pane -D
+
 # split panes using | and -
 unbind h
 unbind v
@@ -83,6 +89,9 @@ bind v split-window -h
 bind h split-window -v
 unbind '"'
 unbind %
+
+# Switch Session Same as Vim Last File
+bind -r ^ switch-client -l
 
 ################################################################################
 # Colors
