--- a/setup/languages.yml
+++ b/setup/languages.yml
@@ -1,35 +1,48 @@
 ---
 - name: Install elixir
-  shell: brew install rebar3 erlang elixir
+  ansible.builtin.shell:
+    cmd: brew install rebar3 erlang elixir
+  args:
+    executable: /bin/bash
   tags:
     - languages
 - name: Install golang
-  shell: brew install go
+  ansible.builtin.shell:
+    cmd: brew install go
+  args:
+    executable: /bin/bash
   tags:
     - languages
 - name: Install lua
-  shell: brew install lua luajit luarocks
+  ansible.builtin.shell:
+    cmd: brew install lua luajit luarocks
+  args:
+    executable: /bin/bash
+  tags:
+    - languages
+- name: Install php
+  ansible.builtin.shell:
+    cmd: brew install php composer
+  args:
+    executable: /bin/bash
   tags:
     - languages
 - name: Install python
-  shell: brew install python3
+  ansible.builtin.shell:
+    cmd: brew install python3
+  args:
+    executable: /bin/bash
   tags:
     - languages
 - name: Install ruby
-  shell: brew install ruby
-  tags:
-    - languages
-- name: Install nvm
-  shell: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
+  ansible.builtin.shell: brew install ruby
   args:
-    creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
-  tags:
-    - languages
-- name: Install lts node version
-  shell: chmod -R +x ~/.nvm && ~/.nvm/nvm.sh install lts
+    executable: /bin/bash
   tags:
     - languages
 - name: Install rust
-  shell: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+  ansible.builtin.shell: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+  args:
+    executable: /bin/bash
   tags:
     - languages
