--- a/setup/neovim.yml
+++ b/setup/neovim.yml
@@ -3,7 +3,18 @@
   shell: brew install neovim
   tags:
     - neovim
-- name: Install neovim
-  shell: brew install neovim
+- name: Stow neovim config
+  ansible.builtin.shell:
+    cmd: stow --target $HOME nvim
+    chdir: ~/dev/personal/dotfiles
+  args:
+    executable: /bin/bash
+  tags:
+    - neovim
+- name: Install neovim package manager
+  ansible.builtin.git:
+    repo: https://github.com/wbthomason/packer.nvim
+    dest: ~/.local/share/nvim/site/pack/packer/start/packer.nvim
+    depth: 1
   tags:
     - neovim
