--- a/setup/setup.yml
+++ b/setup/setup.yml
@@ -4,9 +4,11 @@
   become: true
   become_user: blake
   tasks:
-    # - import_tasks: zsh.yml
-    # - import_tasks: languages.yml
+    - import_tasks: zsh.yml
+    - import_tasks: node.yml
+    - import_tasks: languages.yml
     - import_tasks: dotfiles.yml
-    # - import_tasks: neovim.yml
-    # - import_tasks: terminal-apps.yml
-    # - import_tasks: dev-env.yml
+    - import_tasks: neovim.yml
+    - import_tasks: tmux.yml
+    - import_tasks: dev-tools.yml
+    - import_tasks: dev-env.yml
