update tmux pane switch cmmands

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -77,16 +77,17 @@ bind -r p previous-window
 bind Space last-window
 
 # Switch between panes with vim commands
-bind -r C-l select-pane -R
-bind -r C-k select-pane -U
-bind -r C-h select-pane -L
-bind -r C-j select-pane -D
-
-# split panes using | and -
 unbind h
 unbind v
-bind v split-window -h
-bind h split-window -v
+
+bind -r l select-pane -R
+bind -r k select-pane -U
+bind -r h select-pane -L
+bind -r j select-pane -D
+
+# split panes using | and -
+bind C-v split-window -h
+bind C-h split-window -v
 unbind '"'
 unbind %
 
