--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,6 +32,12 @@ setw -g pane-base-index 1
 # How long to display the pane number on PREFIX-q
 set -g display-panes-time 3000 # 3s
 
+# Better yank navigation
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 # Monitor window activity to display in the status bar
 set-window-option -g monitor-activity on
 
@@ -46,14 +52,8 @@ set -g detach-on-destroy off
 # focus events enabled for terminals that support them
 set -g focus-events on
 
-# Set terminal
-set -g default-terminal 'screen-256color-bce'
-
-# Undercurl support
-set-option -sa terminal-overrides ',screen-256color-bce:RGB'
-set-option -sa terminal-overrides ',screen-256color-bce:Tc'
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colors
+# colors
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Save & restore tmux layouts (https://github.com/tmux-plugins/tmux-resurrect/blob/master/docs/hooks.md)
 set -g @resurrect-hook-post-save-all 'eval $(xdotool getwindowgeometry --shell $WINDOWID); echo 0,$X,$Y,$WIDTH,$HEIGHT > $HOME/.tmux/resurrect/geometry'
@@ -86,8 +86,8 @@ bind -r h select-pane -L
 bind -r j select-pane -D
 
 # split panes using | and -
-bind C-v split-window -h
-bind C-h split-window -v
+bind C-v split-window -h -c "#{pane_current_path}"
+bind C-h split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
