--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,8 +19,8 @@ set -s escape-time 0
 
 # Enable the mouse for scrolling
 set -gq mouse on      # Tmux >= 2.1
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
+# bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+# bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # Allow tmux to set the titlebar
 set -g set-titles on
@@ -69,10 +69,6 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
-# Switch between previous and next windows with repeatable
-bind -r n next-window
-bind -r p previous-window
-
 # Switch between two most recently used windows
 bind Space last-window
 
@@ -97,27 +93,6 @@ bind -r ^ switch-client -l
 ################################################################################
 # Colors
 ################################################################################
-
-# TokyoNight colors for Tmux (https://github.com/folke/tokyonight.nvim/blob/main/extras/tmux_tokyonight_storm.tmux)
-# set -g mode-style "fg=#7aa2f7,bg=#3b4261"
-# set -g message-style "fg=#7aa2f7,bg=#3b4261"
-# set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
-# set -g pane-border-style "fg=#3b4261"
-# set -g pane-active-border-style "fg=#7aa2f7"
-# set -g status "on"
-# set -g status-justify "left"
-# set -g status-style "fg=#7aa2f7,bg=#1f2335"
-# set -g status-left-length "100"
-# set -g status-right-length "100"
-# set -g status-left-style NONE
-# set -g status-right-style NONE
-# set -g status-left "#[fg=#1D202F,bg=#7aa2f7,nobold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
-# set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#1D202F,bg=#7aa2f7,bold] #h "
-# setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
-# setw -g window-status-separator ""
-# setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
-# setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
-# setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
 
 # Duskfox colors for Tmux (https://github.com/edeneast/nightfox.nvim/raw/main/extra/duskfox/nightfox_tmux.tmux)
 set -g mode-style "fg=#191726,bg=#cdcbe0"
@@ -145,8 +120,11 @@ setw -g window-status-current-format "#[fg=#191726,bg=#cdcbe0,nobold,nounderscor
 ################################################################################
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
 
